--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar">
 
-    <div class="container-flex">
+    <div class="container flex">
         <a href="index.html" class="site-brand">
             Liver<span>Blog</span>
         </a>
