--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
     </div>
     <div class="header-form">
         <h2>Sign up to make your own post!</h2>
-        <form class="flex"></form>
+        <form class="flex">
         <input type="text" class="form-control" placeholder="Full Name">
         <input type="email" class="form-control" placeholder="Email">
         <input type="date" class="form-control" placeholder="Age">
         <input type="submit" class="btn" placeholder="Submit">
+        </form>
     </div>
 </div>
 
