--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <h1>You'll Never Walk Alone</h1>
         <p> Lorem ipsum pladenejknfrnfjnrof frnfojnor ifnrjoro</p>
     </div>
+
+    </div>
     <div class="header-form">
         <h2>Sign up to make your own post!</h2>
         <form class="flex">
@@ -69,6 +71,56 @@
         </form>
     </div>
 </div>
+
+<!--Footer-->
+
+<footer class="py-4">
+    <div class="container footer-row">
+        <div class="footer-item">
+            <a href="index.html" class="site-brand">
+                Liver<span>Blog</span>
+            </a>
+            <p class="text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                 when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  It has survived not only five centuries, but also the leap 
+                 into electronic typesetting, remaining essentially unchanged. 
+            </p>
+        </div>
+        <div class="footer-item">
+            <h2>Follow us on:</h2>
+            <ul class="social-links">
+                <li>
+                    <a href = "#">
+                        <i class="fab fa-facebook-f"> </i>
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        <i class="fab fa-instagram"> </i>
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        <i class="fab fa-twitter"> </i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="contact-form footer-item">
+            <h2>Contact us here</h2>
+            <form class="flex">
+                <input type="email" placeholder="Enter Email" class="form-control">
+                <input type="submit" class="btn" value="CONTACT">
+            </form>
+        </div>
+    </div>
+</footer>
+
+
+
 
 </header>
 <script src="script.js"></script>
