--- a/index.html
+++ b/index.html
@@ -72,6 +72,83 @@
         </form>
     </div>
 </div>
+</header>
+
+<section id="latest" class="py-4">
+    <div class="container">
+        <div class="title-wrap">
+            <span class="sm-title">This is our latest posts</span>
+            <h2 class="lg-title">Latest posts</h2>
+        </div>
+
+        <div class="latest-row">
+            <div class="latest-item my-2 shadow">
+                <img src="media/Vandijk.jpeg" alt="champions-league">
+                <div class="latest-item-content">
+                    <span>
+                        <i class = "fas fa-glasses"></i>
+                        Champions League
+                    </span>
+                    <div>
+                        <p class= "text">
+                            Hei liverpool er det beste laget i verden
+                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
+                            van dijk er den beste midtstopperen i verden imo
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="latest-item my-2 shadow">
+                <img src="media/Vandijk.jpeg" alt="champions-league">
+                <div class="latest-item-content">
+                    <span>
+                        <i class = "fas fa-glasses"></i>
+                        Champions League
+                    </span>
+                    <div>
+                        <p class= "text">
+                            Hei liverpool er det beste laget i verden
+                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
+                            van dijk er den beste midtstopperen i verden imo
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="latest-item my-2 shadow">
+                <img src="media/Vandijk.jpeg" alt="champions-league">
+                <div class="latest-item-content">
+                    <span>
+                        <i class = "fas fa-glasses"></i>
+                        Champions League
+                    </span>
+                    <div>
+                        <p class= "text">
+                            Hei liverpool er det beste laget i verden
+                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
+                            van dijk er den beste midtstopperen i verden imo
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="latest-item my-2 shadow">
+                <img src="media/Vandijk.jpeg" alt="champions-league">
+                <div class="latest-item-content">
+                    <span>
+                        <i class = "fas fa-glasses"></i>
+                        Champions League
+                    </span>
+                    <div>
+                        <p class= "text">
+                            Hei liverpool er det beste laget i verden
+                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
+                            van dijk er den beste midtstopperen i verden imo
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!--Footer-->
 
@@ -123,7 +200,7 @@
 
 
 
-</header>
+
 <script src="script.js"></script>
 </body>
 </html>
