--- a/index.html
+++ b/index.html
@@ -74,81 +74,135 @@
 </div>
 </header>
 
-<section id="latest" class="py-4">
-    <div class="container">
-        <div class="title-wrap">
-            <span class="sm-title">This is our latest posts</span>
-            <h2 class="lg-title">Latest posts</h2>
-        </div>
+<!---latest section-->
 
-        <div class="latest-row">
-            <div class="latest-item my-2 shadow">
-                <img src="media/Vandijk.jpeg" alt="champions-league">
-                <div class="latest-item-content">
-                    <span>
-                        <i class = "fas fa-glasses"></i>
-                        Champions League
-                    </span>
-                    <div>
-                        <p class= "text">
-                            Hei liverpool er det beste laget i verden
-                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
-                            van dijk er den beste midtstopperen i verden imo
-                        </p>
-                    </div>
+<section class="product"> 
+        <h2 class="product-category">best selling</h2>
+        <button class="pre-btn"><i class="fas fa-arrow-left"></i> </button>
+            <button class="nxt-btn"><i class=" fas fa-arrow-right"></i> </button>
+        <div class="product-container">
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="media/championsleague.jpeg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
-            <div class="latest-item my-2 shadow">
-                <img src="media/Vandijk.jpeg" alt="champions-league">
-                <div class="latest-item-content">
-                    <span>
-                        <i class = "fas fa-glasses"></i>
-                        Champions League
-                    </span>
-                    <div>
-                        <p class= "text">
-                            Hei liverpool er det beste laget i verden
-                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
-                            van dijk er den beste midtstopperen i verden imo
-                        </p>
-                    </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/media/championsleague.jpeg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
-            <div class="latest-item my-2 shadow">
-                <img src="media/Vandijk.jpeg" alt="champions-league">
-                <div class="latest-item-content">
-                    <span>
-                        <i class = "fas fa-glasses"></i>
-                        Champions League
-                    </span>
-                    <div>
-                        <p class= "text">
-                            Hei liverpool er det beste laget i verden
-                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
-                            van dijk er den beste midtstopperen i verden imo
-                        </p>
-                    </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card3.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
-            <div class="latest-item my-2 shadow">
-                <img src="media/Vandijk.jpeg" alt="champions-league">
-                <div class="latest-item-content">
-                    <span>
-                        <i class = "fas fa-glasses"></i>
-                        Champions League
-                    </span>
-                    <div>
-                        <p class= "text">
-                            Hei liverpool er det beste laget i verden
-                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
-                            van dijk er den beste midtstopperen i verden imo
-                        </p>
-                    </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card4.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card5.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card6.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card7.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card8.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card9.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="images/card10.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to wishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-description">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 <!--Footer-->
 
