--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
-
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     
@@ -153,11 +153,11 @@
             </ul>
         </div>
 
-        <div class="contact-form footer-item">
-            <h2>Contact us here</h2>
+        <div class="subscribe-form footer-item">
+            <h2>Subscribe to us here</h2>
             <form class="flex">
                 <input type="email" placeholder="Enter Email" class="form-control">
-                <input type="submit" class="btn" value="CONTACT">
+                <input type="submit" class="btn" value="Subscribe">
             </form>
         </div>
     </div>
