--- a/index.html
+++ b/index.html
@@ -74,135 +74,114 @@
 </div>
 </header>
 
-<!---latest section-->
+<!---Blog section-->
+<section id = "blog" class = "py-4">
+    <div class = "container">
+        <div class = "title-wrap">
+            <h2 class = "sm-title">read these blogs for information</h2>
+            <h3 class = "lg-title">recent blogs</h3>
+        </div>
 
-<section class="product"> 
-        <h2 class="product-category">best selling</h2>
-        <button class="pre-btn"><i class="fas fa-arrow-left"></i> </button>
-            <button class="nxt-btn"><i class=" fas fa-arrow-right"></i> </button>
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="media/championsleague.jpeg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
+        <div class = "blog-row">
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
             </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="/media/championsleague.jpeg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
+
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card3.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
             </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card4.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
+
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card5.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
             </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card6.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
+
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card7.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
             </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card8.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
+
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card9.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
             </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="images/card10.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
+
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
                 </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-description">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
+                </div>
+            </div>
+
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
+                </div>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
+                </div>
+            </div>
+
+            <div class = "blog-item my-2 shadow">
+                <div class = "blog-item-top">
+                    <img src = "media/Vandijk.jpeg" alt = "blog">
+                    <span class = "blog-date">oct 28, 2021</span>
+                </div>
+                <div class = "blog-item-bottom">
+                    <span>travel | john doe</span>
+                    <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
 <!--Footer-->
 
@@ -241,11 +220,11 @@
             </ul>
         </div>
 
-        <div class="contact-form footer-item">
-            <h2>Contact us here</h2>
+        <div class="subscribe-form footer-item">
+            <h2>Subscribe to us here</h2>
             <form class="flex">
                 <input type="email" placeholder="Enter Email" class="form-control">
-                <input type="submit" class="btn" value="CONTACT">
+                <input type="submit" class="btn" value="Subscribe">
             </form>
         </div>
     </div>
