--- a/blog.html
+++ b/blog.html
@@ -183,6 +183,18 @@
             </ul>
         </div>
 
+        <div class = "footer-item">
+            <h2>People to contact</h2>
+            <ul>
+                <li><a href = "#">Eksjdks@gmail.com</a></li>
+                <li><a href = "#">Austam@gmail.com</a></li>
+                <li><a href = "#">Maldmnke@gmail</a></li>
+                <li><a href = "#">Switz@gmail.com</a></li>
+                <li><a href = "#">Gallo@gmail.com</a></li>
+            </ul>
+        </div>
+
+
         <div class="subscribe-form footer-item">
             <h2>Subscribe to us here</h2>
             <form class="flex">
