--- a/blog-test.html
+++ b/blog-test.html
@@ -65,10 +65,10 @@
 </header>
 
 <h1>Blogs</h1>
-<ul id="blogs">Loading...</ul>
+<ul id="posts">Loading...</ul>
 
 <script>
-    const url = "https://www.geek.no/wp-json/wp/v2/posts";
+    const url = "http://localhost:8888/wp-json/wp/v2/posts";
     //const url = "https://www.geek.no/wp-json/wp/v2/pages";
     fetch(url)
     .then(response => response.json())
@@ -80,17 +80,21 @@
       console.error('Error:', error);
     });
     
-    const output = document.querySelector("#blogs");
-    function listbBlogs (blogs) {
+    const output = document.querySelector("#posts");
+    function listPosts (posts) {
         let myList = "";
-        for (let blog of blogs) {
-            console.log(blog);
+        for (let post of posts) {
+            console.log(post);
             myList += `
             <li>
-                <a href="post.html?id=${blog.id}">
-                    ${blog.title.rendered}
+                <a href="blog-test.html?id=${post.id}">
+                    ${post.title.rendered}
                 </a>
             </li>`;
         }
         output.innerHTML = myList;
     }
+
+</script> 
+</body>
+</html>
