--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
@@ -101,7 +101,7 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
@@ -113,7 +113,7 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
@@ -125,7 +125,7 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
@@ -137,7 +137,7 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
@@ -149,7 +149,7 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
@@ -161,7 +161,7 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
@@ -173,12 +173,14 @@
                     <span class = "blog-date">oct 28, 2021</span>
                 </div>
                 <div class = "blog-item-bottom">
-                    <span>travel | john doe</span>
+                    <span>Written by | john doe</span>
                     <a href = "#">Lorem, ipsum dolor sit amet consectetur adipisicing elit?</a>
                     <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem nulla harum accusantium tempora dicta quas quod id, repellat temporibus illo libero explicabo laboriosam.</p>
                 </div>
             </div>
         </div>
+        <a class="prev" onclick="plusSlides(-2)"></a>
+        <a class="next" onclick="plusSlides(2)"></a>
     </div>
 </section>
 
