--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LiverBlog</title>
+    <title>Contact LiverBlog</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
@@ -57,63 +57,60 @@
 
     <div class="header-title">
         <h1>Contact</h1>
-        <p> Lorem ipsum pladenejknfrnfjnrof frnfojnor ifnrjoro</p>
+        <p> If you have any questions or ideas, contact us here</p>
     </div>
 </div>
 </header>
 <!--Contact-->
 
-<section id="contact" class="py-4">
-
-    <div class="container">
-        <div class="title-wrap">
-            <span class="sm-title">Get in touch with us</span>
-            <h2 class="lg-title">contact us</h2>
+<section id = "contact" class = "py-4">
+    <div class = "container">
+        <div class = "title-wrap">
+            <span class = "sm-title">get in touch with us</span>
+            <h2 class = "lg-title">contact us</h2>
         </div>
-        <div class="contact-row">
-            <div class="contact-left">
-                <form class="contact-form">
-                    <input type = "text" class="form-control" placeholder="Your name">
-                    <input type = "email" class="form-control" placeholder="Your email">
-                    <textarea rows="4" class="form-control" placeholder="Your message" style="resize: none;"></textarea>
-                    <input type="submit" class="btn" value="Send message">
+
+        <div class = "contact-row">
+            <div class = "contact-left">
+                <form class = "contact-form">
+                    <input type = "text" class = "form-control" placeholder="Your name">
+                    <input type = "email" class = "form-control" placeholder="Your email">
+                    <textarea rows = "4" class = "form-control" placeholder="Your message" style = "resize: none;"></textarea>
+                    <input type = "submit" class = "btn" value = "Send message">
                 </form>
             </div>
-            <div class="contact-right my-2">
-                <div class="contact-item">
-                    <span class="contact-icon flex">
-                        <i class="fa fa-phone-alt"></i>
+            <div class = "contact-right my-2">
+                <div class = "contact-item">
+                    <span class = "contact-icon flex">
+                        <i class = "fa fa-phone-alt"></i>
                     </span>
-                    <span>Phone</span>
-                    <p class="text">
-                        +47 56-37-21-70
-                    </p>
+                    <div>
+                        <span>Phone</span>
+                        <p class = "text">+01-584-886-009</p>
+                    </div>
+                </div>
+                <div class = "contact-item">
+                    <span class = "contact-icon flex">
+                        <i class = "fa fa-map-marked-alt"></i>
+                    </span>
+                    <div>
+                        <span>Address</span>
+                        <p class = "text">102 East 22nd Street, NY</p>
+                    </div>
+                </div>
+                <div class = "contact-item">
+                    <span class = "contact-icon flex">
+                        <i class = "fa fa-envelope"></i>
+                    </span>
+                    <div>
+                        <span>Message</span>
+                        <p class = "text">eskilmaroy@gmail.com</p>
+                    </div>
                 </div>
             </div>
-            <div class="contact-item">
-                <span class="contact-icon flex">
-                    <i class="fa fa-map-marked-alt"></i>
-                </span>
-                <span>Adress</span>
-                <p class="text">
-                    Maroyvegen 341
-                </p>
-            </div>
         </div>
-        <div class="contact-item">
-            <span class="contact-icon flex">
-                <i class="fa fa-envelope"></i>
-            </span>
-            <span>Email</span>
-            <p class="text">
-                liverblog@gmail.com
-            </p>
-        </div>
-    </div>
-         </div>
     </div>
 </section>
-
 
 
 <!--Footer-->
@@ -148,6 +145,14 @@
                 <li>
                     <a href = "#">
                         <i class="fab fa-twitter"> </i>
+                    </a>
+                    <a href = "#">
+                        <i class = "fab fa-pinterest"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        <i class = "fab fa-google-plus"></i>
                     </a>
                 </li>
             </ul>
