--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LiverBlog</title>
+    <title>LiverBlog Blogs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
@@ -58,7 +58,7 @@
 
     <div class="header-title">
         <h1>Our blogs</h1>
-        <p> Lorem ipsum pladenejknfrnfjnrof frnfojnor ifnrjoro</p>
+        <p> Read and learn more about Liverpool Football Club</p>
     </div>
 
     </div>
@@ -70,13 +70,13 @@
 <section class="latest">
     <div class="container">
         <div class="title-wrap">
-            <span class="sm-title">This is our latest posts</span>
-            <h2 class="lg-title">Latest posts</h2>
+            <span class="sm-title">Read our exciting blogs</span>
+            <h2 class="lg-title">Blog Posts</h2>
         </div>
 
         <div class="latest-row">
             <div class="latest-item my-2 shadow">
-                <img src="media/Vandijk.jpeg" alt="champions-league">
+                <img src="media/Vandijk.jpeg" alt="van-dijk-cl">
                 <div class="latest-item-content">
                     <span>
                         <i class = "fas fa-glasses"></i>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="latest-item my-2 shadow">
-                <img src="media/Special-night.jpg" class="latest-img" alt="champions-league">
+                <img src="media/Special-night.jpg" alt="Special-night">
                 <div class="latest-item-content">
                     <span>
                         <i class = "fas fa-glasses"></i>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="latest-item my-2 shadow">
-                <img src="media/captain.jpeg"  alt="champions-league">
+                <img src="media/captain.jpeg"  alt="Captain">
                 <div class="latest-item-content">
                     <span>
                         <i class = "fas fa-glasses"></i>
@@ -125,11 +125,43 @@
                 </div>
             </div>
             <div class="latest-item my-2 shadow">
-                <img src="media/dissapointed.jpeg" class="latest-img" alt="champions-league">
+                <img src="media/liverpool-dalglish.jpeg"  alt="dalglish">
                 <div class="latest-item-content">
                     <span>
                         <i class = "fas fa-glasses"></i>
-                        Dissapointed
+                        Old Guard
+                    </span>
+                    <div>
+                        <p class= "text">
+                            Hei liverpool er det beste laget i verden
+                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
+                            van dijk er den beste midtstopperen i verden imo
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="latest-item my-2 shadow">
+                <img src="media/Liverpool-youth.jpeg"  alt="Youth">
+                <div class="latest-item-content">
+                    <span>
+                        <i class = "fas fa-glasses"></i>
+                        Youngsters
+                    </span>
+                    <div>
+                        <p class= "text">
+                            Hei liverpool er det beste laget i verden
+                            jaaa vi elsker liverpool Lalallalalala Lalallalalala
+                            van dijk er den beste midtstopperen i verden imo
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="latest-item my-2 shadow">
+                <img src="media/liverpool-women.jpeg"  alt="Womens-team">
+                <div class="latest-item-content">
+                    <span>
+                        <i class = "fas fa-glasses"></i>
+                        Fantastic women
                     </span>
                     <div>
                         <p class= "text">
@@ -178,6 +210,14 @@
                 <li>
                     <a href = "#">
                         <i class="fab fa-twitter"> </i>
+                    </a>
+                    <a href = "#">
+                        <i class = "fab fa-pinterest"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href = "#">
+                        <i class = "fab fa-google-plus"></i>
                     </a>
                 </li>
             </ul>
